--- a/src/main/resources/templates/member/my-page.html
+++ b/src/main/resources/templates/member/my-page.html
@@ -19,16 +19,16 @@
     <link rel="icon" href="/images/favicon.ico">
 
     <!--세션 확인 스크립트-->
-    <script th:inline="javascript">
-        /* 세션 확인 */
-        var sessionValue = [[${session.getAttribute}]];
-        if (sessionValue === null || sessionValue === undefined) {
-            // 세션이 비어있을 때 알림창 표시
-            alert('세션이 비어있습니다. 로그인이 필요합니다.');
-            // 로그인 페이지로 이동
-            window.location.href = '/member/login';
-        }
-    </script>
+    <!--    <script th:inline="javascript">-->
+    <!--        /* 세션 확인 */-->
+    <!--        var sessionValue = [[${session.getAttribute}]];-->
+    <!--        if (sessionValue === null || sessionValue === undefined) {-->
+    <!--            // 세션이 비어있을 때 알림창 표시-->
+    <!--            alert('세션이 비어있습니다. 로그인이 필요합니다.');-->
+    <!--            // 로그인 페이지로 이동-->
+    <!--            window.location.href = '/member/login';-->
+    <!--        }-->
+    <!--    </script>-->
 </head>
 
 <body>
@@ -39,7 +39,8 @@
             <div class="profile">
                 <div class="imageUploadContainer">
                     <div class="user-avatar">
-                        <div class="no-avatar">
+                        <div class="no-avatar"
+                             th:if="${session.member.memberImgName == null and session.member.memberKakaoProfileUrl == null}">
                             <svg width="36" height="36" viewBox="0 0 36 36" fill="black"
                                  xmlns="http://www.w3.org/2000/svg" style="fill:#CFD4D7;"
                                  data-v-bd9f2bcc="" data-v-16c10fa5="">
@@ -48,6 +49,12 @@
                                         d="M8.89065 23.704C10.986 20.7531 14.3809 19 18 19C21.6191 19 25.014 20.7531 27.1094 23.704L27.3942 24.1052C29.7451 27.416 27.3779 32 23.3174 32H12.6826C8.6221 32 6.25494 27.416 8.60575 24.1052L8.89065 23.704Z"
                                         data-v-bd9f2bcc=""></path>
                             </svg>
+                        </div>
+                        <div th:if="${session.member.memberImgName != null}">>
+                            <img class="profile-img" th:src="${session.member.memberImgName}">
+                        </div>
+                        <div th:if="${session.member.memberKakaoProfileUrl != null and session.member.memberImgName == null}">
+                            <img class="profile-img" th:src="${session.member.memberKakaoProfileUrl}">
                         </div>
                     </div>
                 </div>
@@ -94,7 +101,7 @@
                         </path>
                         <path data-v-bd9f2bcc="" fill-rule="evenodd" clip-rule="evenodd"
                               d="M20 12C20 11.4477 19.5523 11 19 11H6C5.44771 11 5 11.4477 5 12C5 12.5523 5.44771 13 6 13H19C19.5523 13 20 12.5523 20 12Z">
-                        </path>
+                            </path>
                     </svg>
                 </div>
                 <div class="personalInfoSetting">
@@ -105,7 +112,7 @@
                 <div class="myProfileContainer active">
                     <div class="myProfileLink">
                         <button class="myProfileButton">
-                            <div class="myProfile">
+                            <div class="myProfile active-font">
                                 프로필
                             </div>
                         </button>
@@ -128,12 +135,19 @@
                     <div class="userInformationContainer">
                         <div class="imageUploadContainer">
                             <label for="imageUploadContainer">
-                                <i class="image"></i>
-                                <div class="imageItem"></div>
+                                <div th:if="${session.member.memberImgName == null and session.member.memberKakaoProfileUrl == null}">
+                                    <i class="image"></i>
+                                </div>
+                                <div th:if="${session.member.memberImgName != null}">>
+                                    <img class="update-container-img" th:src="${session.member.memberImgName}">
+                                </div>
+                                <div th:if="${session.member.memberKakaoProfileUrl != null and session.member.memberImgName == null}">
+                                    <img class="update-container-img" th:src="${session.member.memberKakaoProfileUrl}">
+                                </div>
                             </label>
-                            <input id="imageUploadContainer" class="imageUploadContainer" type="file"
-                                   accept="image/jpg,image/png,image/jpeg,image/gif">
                         </div>
+                        <input id="imageUploadContainer" class="imageUploadContainer" style="display: none" type="file"
+                               accept="image/jpg,image/png,image/jpeg,image/gif">
                         <div class="userName" th:text="${session.member.memberNickname}"></div>
                     </div>
                     <div class="serviceInformationContainer">
@@ -238,37 +252,7 @@
             </div> -->
         </div>
         <hr class="mainBorderDividingLine borderDividingLine">
-        <div class="notificationSettingTitle">
-            알림 설정
-        </div>
         <div class="notificationSettingContainer">
-            <div class="notificationRecieveAgreement">
-                수신 동의
-            </div>
-            <div class="lawNotificationAgreementContainer">
-                <input id="lawNotification" class="lawNotification" type="checkbox" disabled="disabled">
-                <label for="lawNotification" class="disabled">
-                    <div class="lawNotificationAgreement">
-                        법령이 정한 필수 공지
-                    </div>
-                </label>
-            </div>
-            <div class="serviceNotificationAgreementContainer">
-                <input id="serviceNotification" class="serviceNotification" type="checkbox">
-                <label for="serviceNotification" class="able checked" id="serviceNotificationLabel">
-                    <div class="serviceNotificationAgreement">
-                        서비스 알림 동의
-                    </div>
-                </label>
-            </div>
-            <div class="commercialNotificationAgreementContainer">
-                <input id="commercialNotification" class="commercialNotification " type="checkbox">
-                <label for="commercialNotification" class="able" id="commercialNotificationLabel">
-                    <div class="commercialNotificationAgreement">
-                        광고 알림 동의
-                    </div>
-                </label>
-            </div>
             <div class="contactInfoContainer">
                 <div class="contactInfoTitle">
                     연락처
@@ -277,15 +261,15 @@
                     각종 알림을 받을 연락처를 입력해주세요.
                 </div>
                 <span>
-                    <form action="#" id="phoneNumberForm">
+                    <form th:action="@{/member/my-page}" method="post" id="phoneNumberForm">
                         <div class="phoneNumberContainer">
                             <span>
-                                <div class="phoneNumberInputContainer">
-                                   <input type="text" class="phoneNumberBox" th:value="${session.member.memberTel}"
-                                          placeholder="ex) 01012345678">
-                                </div>
+                                <label class="phoneNumberInputContainer">
+                                   <input type="text" name="memberTel" class="phoneNumberBox" th:value="${session.member.memberTel}"
+                                          placeholder="ex) 01012345678" maxlength="11">
+                                </label>
                                 <div class="phoneNumberErrorMessage">
-                                    올바른 번호를 입력해주세요.
+                                    전화번호 11자리를 입력해주세요.
                                 </div>
                             </span>
                             <button class="saveContactInfo">
