--- a/src/main/resources/templates/message/sent.html
+++ b/src/main/resources/templates/message/sent.html
@@ -8,7 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/message/message-received.css">
+    <link rel="stylesheet" href="/css/message/message-send.css">
     <link rel="stylesheet" href="/css/header-footer.css"></link>
     <link rel="icon" href="/images/favicon.ico">
     <style>
@@ -98,12 +98,18 @@
                                         <div class="profileContentsHeader">
                                             <div class="profileContentsTitle">
                                                 <div class="personalInfoSetting">
-                                                    받은 메세지 보관함
+                                                    보낸 메세지 보관함
                                                 </div>
-                                                <button class="delete-btn">
-                                                    <div class="enter-button-icon"></div> 삭제
-                                                    <div class="enter-button-icon"></div>
-                                                </button>
+                                                <div>
+                                                    <button class="friend-message-btn">
+                                                        <div class="enter-button-icon"></div> 쪽지 작성
+                                                        <div class="enter-button-icon"></div>
+                                                    </button>
+                                                    <button class="delete-btn">
+                                                        <div class="enter-button-icon"></div> 삭제
+                                                        <div class="enter-button-icon"></div>
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="right-box-friend-box">
@@ -116,7 +122,7 @@
                                                 </div>
                                                 <div class="right-box-name">
                                                     <div class="title">제목</div>
-                                                    <div class="nickname">보낸사람</div>
+                                                    <div class="nickname">받은사람</div>
                                                     <div class="date">날짜</div>
                                                 </div>
                                             </div>
@@ -131,7 +137,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="right-box-name">
-                                                    <div class="message-title">안녕하세요. 질문 있어서 보냅니다.</div>
+                                                    <div class="message-title">질문에 대한 답변입니다.</div>
                                                     <div class="message-nickname">손오공</div>
                                                     <div class="message-date">2023.01.03</div>
                                                 </div>
@@ -147,7 +153,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="right-box-name">
-                                                    <div class="message-title">도를 믿으시나요? 당신 곁에 신이 있습니다.</div>
+                                                    <div class="message-title">안삽니다.</div>
                                                     <div class="message-nickname">삼장법사</div>
                                                     <div class="message-date">2023.01.02</div>
                                                 </div>
@@ -163,7 +169,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="right-box-name">
-                                                    <div class="message-title">식당은 구내식당으로 예약해놓았습니다.</div>
+                                                    <div class="message-title">날짜 확인했습니다. 감사합니다</div>
                                                     <div class="message-nickname">저팔계</div>
                                                     <div class="message-date">2023.01.01</div>
                                                 </div>
