--- a/src/main/resources/static/css/search/search.css
+++ b/src/main/resources/static/css/search/search.css
@@ -403,7 +403,6 @@ hr {
 .main-container {
     min-height: calc(100vh - 342px);
     width: 100%;
-    height: 100%;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -413,12 +412,13 @@ hr {
 
 /* Second Header */
 .header-search {
-    background-color: #f7f8f8;  
+    background-color: #f7f8f8;
     left: 0;
-    position: fixed;
+    position: relative;
     transition: top .1s linear, opacity .1s ease-in;
     width: 100vw;
     z-index: 5;
+    margin-top: -2px;
 }
 
 .grid-container{
@@ -473,9 +473,8 @@ hr {
 
 /* Main Body */
 
-#main-grid {
+.main-grid1 {
     padding-top: 0!important;
-
 }
 
 .c-new-grid.fluid {
@@ -693,12 +692,13 @@ hr {
     flex-direction: row;
 }
 
-.button-sub-header-menu:hover 
+.button-sub-header-menu:hover
 {color:#797f83 !important;
-    }
+}
 
-.fontweight {
-    font-weight: bold;
+.fontweight1:hover {
+    color: #2a7de1;;
+    background-color: #1d1d1e;
 }
 
 .c-new-col.no-gutters {width:360px;display:inline-block;}
@@ -883,28 +883,14 @@ svg:not(:root) {
     margin-bottom: 24px;
 }
 
-.c-edu-card {
-    background-color: var(--background-color);
-    border-radius: 4px;
-    cursor: pointer;
-    min-width: 152px;
-    padding-bottom: 12px;
-    width: var(--card-width);
-}
+
 
 .disabled {
     cursor: not-allowed!important;
     pointer-events: none;
 }
 
-.c-edu-card--image-container {
-    border-radius: var(--border-radius);
-    height: var(--image-height);
-    isolation: isolate;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-}
+
 
 .c-edu-card--chip-container {
     left: 8px;
@@ -913,16 +899,6 @@ svg:not(:root) {
     z-index: 1;
 }
 
-.c-edu-card--image {
-    -webkit-animation: scale-down-center-data-v-60dcbe0d .2s ease-in both;
-    animation: scale-down-center-data-v-60dcbe0d .2s ease-in both;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-    -o-object-position: center;
-    object-position: center;
-    width: 100%;
-}
 
 img {
     border-style: none;
@@ -931,28 +907,7 @@ img {
     overflow: clip;
 }
 
-.c-edu-card--info-container {
-    margin-top: 12px;
-    width: 100%;
-}
 
-.c-edu-card--subtitle {
-    -webkit-box-align: center;
-    align-items: center;
-    display: -webkit-box!important;
-    display: flex!important;
-}
-
-.c-edu-card--title {
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    word-wrap: break-word;
-    display: -webkit-box;
-    height: var(--title-height);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    word-break: keep-all;
-}
 
 .mt-4 {
     margin-top: 4px!important;
@@ -965,12 +920,6 @@ img {
     line-height: 25px;
 }
 
-.c-edu-card--caption {
-    -webkit-box-align: center;
-    align-items: center;
-    display: -webkit-box!important;
-    display: flex!important;
-}
 
 .mt-8 {
     margin-top: 8px!important;
@@ -1034,12 +983,21 @@ img {
 }
 
 
+.footerbottom
+{margin-bottom: 120px;}
+
+
+
+
+
+
+
 @media (max-width: 1000px) {
 
     .header-search{
-    overflow: auto;
-    white-space: nowrap;
-    color: #112031;
+        overflow: auto;
+        white-space: nowrap;
+        color: #112031;
     }
 
     .c-new-grid {
