--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slide" id="slide1">
+            <div th:onclick="|location.href='@{/meeting-community/posts}'|" class="slide" id="slide1">
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slide" id="slide2">
+            <div th:onclick="|location.href='@{/general-community/posts}'|" class="slide" id="slide2">
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
@@ -88,11 +88,11 @@
                     </div>
                 </div>
             </div>
-            <div class="slide" id="slide3">
+            <div th:onclick="|location.href='@{/meeting-community/write}'|" class="slide" id="slide3">
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
-                            즐거움을 <span style="color: #77C4FF;">함께</span> 나누는<br>모임 게시판
+                            글을 작성하고 <br> <span style="color: #77C4FF;"> 친구 </span> 를만나 보세요!
                         </div>
                     </div>
                     <div class="banner-right-side-box">
@@ -104,7 +104,7 @@
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
-                            뭉치면 더욱 재미 있는<br><span style="color: #77C4FF;">함께해young</span>
+                            뭉치면 더욱 재미 있는<br><span style="color: #77C4FF;">함께해YOUNG</span>
                         </div>
                     </div>
                     <div class="banner-right-side-box">
@@ -157,7 +157,7 @@
                 <div class="mb24"></div>
             </div>
             <div class="cards-container">
-                <div class="card">
+                <div th:onclick="|location.href='@{/general-community/posts}'|" class="card">
                     <div class="card-img-box">
                         <img src="/images/introduce/001.jpg">
                     </div>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div th:onclick="|location.href='@{/meeting-community/posts}'|" class="card">
                     <div class="card-img-box">
                         <img src="/images/introduce/002.jpg">
                     </div>
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div th:onclick="|location.href='@{/member/my-schedule}'|" class="card">
                     <div class="card-img-box">
                         <img src="/images/introduce/003.jpg">
                     </div>
@@ -208,7 +208,7 @@
             <div class="introduce-container">
                 <div class="main-section-title">일반 게시판에서 지금 만나요</div>
                 <div class="link-btn-container">
-                    <a href="">
+                    <a th:href="@{/general-community/posts}">
                         <button class="link-btn">바로가기</button>
                     </a>
                 </div>
@@ -298,7 +298,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="community-to-more">
+                    <button th:onclick="|location.href='@{/general-community/post}'|" class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
@@ -388,7 +388,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="community-to-more">
+                    <button th:onclick="|location.href='@{/general-community/post}'|" class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
@@ -400,7 +400,7 @@
             <div class="introduce-container">
                 <div class="main-section-title">모임 게시판에서 마음에 드는 모임을 찾아보세요</div>
                 <div class="link-btn-container">
-                    <a href="">
+                    <a th:href="@{/meeting-community/posts}">
                         <button class="link-btn">바로가기</button>
                     </a>
                 </div>
@@ -495,7 +495,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="community-to-more">
+                    <button th:onclick="|location.href='@{/meeting-community/post}'|" class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
@@ -586,7 +586,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="community-to-more">
+                    <button th:onclick="|location.href='@{/meeting-community/post}'|" class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
